Blurred bg fix for mobile

--- a/css/style.css
+++ b/css/style.css
@@ -556,6 +556,7 @@ nav .button-collapse {
   #navWrapper {
     background-color: rgba(0, 0, 0, 0.2);
     backdrop-filter: blur(30px);
+    -webkit-backdrop-filter: blur(30px);
     z-index: -1;
     opacity: 0;
     height: 100vh;
@@ -729,6 +730,7 @@ nav .button-collapse {
   width: 100vw;
   background-color: rgba(4,16,19,0.8);
   backdrop-filter: blur(30px);
+  -webkit-backdrop-filter: blur(30px);
   z-index: 4;
   opacity: 1;
 }
